# rave_vst

./: CMakeLists.txt  compile.sh
.github/workflows/: build.yaml
cmake/: add_torch.cmake  compiler_settings.cmake
source/: CMakeLists.txt  EngineUpdater.cpp  ModelDownload.cpp  ModelDownload.h  PluginEditor.cpp  PluginEditor.h  PluginEditorNetworking.cpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorMisc.cpp  PluginProcessorModel.cpp  PluginProcessorProcessing.cpp  Rave.h  helpers.cpp  helpers.h
source/ui/: CompressorPanel.h  FoldablePanel.h  GUI_GLOBALS.h  Header.h  InputPanel.h  ModelExplorer.h  ModelPanel.h  MyLookAndFeel.h  OutputPanel.h  SliderGroup.h
